--- a/Client/package.json
+++ b/Client/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-free": "^7.0.0",
     "@tailwindcss/vite": "^4.1.12",
     "clsx": "^2.1.1",
+    "jwt-decode": "^4.0.0",
     "motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
