--- a/Client/package.json
+++ b/Client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.0",
     "@tailwindcss/vite": "^4.1.12",
+    "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "jwt-decode": "^4.0.0",
     "motion": "^12.23.12",
