--- a/Client/package.json
+++ b/Client/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.1.1",
     "react-intersection-observer": "^9.16.0",
     "react-router": "^7.8.2",
+    "react-select": "^5.10.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12"
   },
