--- a/Server/package.json
+++ b/Server/package.json
@@ -3,6 +3,7 @@
     "bcryptjs": "^3.0.2",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.1",
     "express": "^4.21.2",
     "express-mongo-sanitize": "^2.2.0",
@@ -14,6 +15,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "streamifier": "^0.1.1",
     "validator": "^13.15.15",
     "xss-clean": "^0.1.4"
   },
