--- a/Client/package.json
+++ b/Client/package.json
@@ -17,8 +17,10 @@
     "jwt-decode": "^4.0.0",
     "motion": "^12.23.12",
     "react": "^19.1.1",
+    "react-content-loader": "^7.1.1",
     "react-dom": "^19.1.1",
     "react-intersection-observer": "^9.16.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-router": "^7.8.2",
     "react-select": "^5.10.2",
     "tailwind-merge": "^3.3.1",
